<resources>
    <string name="app_name">KidBalanceApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home bambino -->
    <string name="testo_pianeta_destinazione">To </string>
    <string name="ic_moon">Moon icon</string>
    <string name="ic_mars">Mars icon</string>
    <string name="ic_jupiter">Jupiter icon</string>
    <string name="ic_user">Child icon</string>
    <string name="ic_saturn">Saturn icon</string>
    <string name="ic_uranus">Uranus icon</string>
    <string name="ic_neptune">Neptune icon</string>
    <string name="NomeApp">KidBalance</string>
    <string name="new_img_b_intro">Select a new image for your profile!</string>
    <string name="new_img_selected">Image updated!</string>

    <!-- pianeti -->
    <string name="planet_moon">Moon</string>
    <string name="planet_mars">Mars</string>
    <string name="planet_jupiter">Jupiter</string>
    <string name="planet_saturn">Saturn</string>
    <string name="planet_uranus">Uranus</string>
    <string name="planet_neptune">Neptune</string>

    <string name="parent_acc"><u>Login into parent\'s profile</u></string>

    <!-- form bambino -->
    <string name="add_child">Add child\'s informations</string>
    <string name="child_name">Child\'s name</string>
    <string name="child_surname">Child\'s surname</string>
    <string name="child_profile_name">Child\'s profile name</string>
    <string name="child_birthday">Child\'s birthday</string>
    <string name="child_height">Child\'s height (in cm)</string>
    <string name="child_sex_f">Female</string>
    <string name="child_sex_m">Male</string>
    <string name="added_child"> successfully added!</string>
    <string name="add_child_btn">Add child</string>
    <string name="another_child">Do you want to add another child? \nYou can also do it later</string>
    <string name="cancel_btn">Cancel</string>


    <!-- pin -->
    <string name="hint_login_pin">Insert login pin</string>
    <string name="Login_text">Login</string>
    <string name="pin_forgotten"><u>Pin forgotten</u></string>
    <string name="Reset_question">What was the name of your best friend when you were a child?</string>
    <string name="hint_name">Name</string>
    <string name="btn_continue">Continue</string>
    <string name="set_pin_text">Set pin to access parent\'s profile</string>
    <string name="security_question_intro">Security question</string>
    <string name="set_pin_hint">Insert 4 number pin</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="security_question">Security question</string>
    <string name="answer_security_question_intro">Answer security question</string>
    <string name="reset_security_question">Reset security question</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="wrong_count_pin">Insert 4 numbers</string>
    <string name="wrong_name">The answer is not right</string>
    <string name="pin_check">Check pin, seems to be wrong</string>
    <string name="unsw_question">You forgot to answer the question</string>


    <!-- create account -->
    <string name="btn_create_account">Create account</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="tutor_check">I declare I am the children\'s tutor</string>
    <string name="intro_g_reg">Insert parent\'s profile name</string>
    <string name="welcome_text">Welcome back!</string>

    <!-- grafico -->
    <string name="header_graph">Child\'s weight trend</string>
    <string name="header_home_g">Select a child to see the data about their weight</string>
    <string name="header_home_g_first">Create new child profile using the button below</string>
    <string name="nuovo_b"><u>create a new child profile</u></string>
    <string name="welcome_header">Welcome back, </string>
    <string name="welcome_first_time">Welcome, </string>
    <string name="intro_pesate">Latest weights</string>
    <string name="no_pesate">There is no data about </string>
    <string name="BMI_intro">Latest BMI value</string>
    <string name="weight_intro">Weight (kg)</string>
    <string name="data_intro">Date</string>
    <string name="wifi_connection">Make sure you\'re disconnected to the scale</string>
    <string name="height">Height:</string>
    <string name="edit_height"><u>Edit height</u></string>
    <string name="intro_graph">The graph shows the weight data recorded over time</string>
    <string name="new_height_intro">Insert child\'s new height (in cm)</string>
    <string name="new_height_hint">New height (in cm)</string>
    <string name="confirm_text">Confirm</string>
    <string name="mail_sbj">Latest data about </string>

    <string name="bmi_red_over">The BMI value is high and it denotes a state of overweight</string>
    <string name="bmi_red_under">The BMI value is low and it denotes a state of underweight</string>
    <string name="bmi_yellow_over">The BMI value is slightly high and it denotes a light overweight</string>
    <string name="bmi_yellow_under">The BMI value is slightly low and it denotes a light underweight</string>
    <string name="bmi_green">The BMI value is optimal and it denotes the ideal weight</string>


    <!-- gioco -->
    <string name="instruction_game">Hop on the board and when the lights are green click START to play!</string>
    <string name="alert_intro">Connection required</string>
    <string name="alert_text">Are you sure you\'re connected to WiFi \"KidBalance\"?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="start_btn">Start</string>
    <string name="pianeta_ragg_intro">Congratulations!</string>
    <string name="pianeta_ragg_text">You reached </string>
    <string name="amazing_btn">Amazing!</string>


    <!-- intro -->
    <string name="next_btn">Next</string>
    <string name="first_intro">Let\'s turn on the engines!</string>
    <string name="first_main">We need your help to reach the next planet! But first let\'s check together that everything is ready.</string>
    <string name="second_intro">Look and memorize</string>
    <string name="second_main">There are four buttons in four different colors, you have to look the light sequence and try to remember it in the right order.</string>
    <string name="third_intro">Repeat the sequence</string>
    <string name="third_main">Repeat the light sequence you saw pushing the colored buttons in the same order.</string>
    <string name="fourth_intro">The game gets tough!</string>
    <string name="fourth_main">The more sequences you get right the more they will become hard to repeat. You will have to practice if you want to become a real astronaut!</string>
    <string name="fifth_intro">Beat your records!</string>
    <string name="fifth_main">Try to get the highest number of points and together we will discover the universe!</string>
    <string name="play_btn">Play!</string>

    <!-- alert bonus-->
    <string name="bonus_title">Well done!</string>
    <string name="bonus1_body">You scored more than 10 points, you earned a multiplier x1.2 \nYour final score is </string>
    <string name="bonus_pt1">You scored </string>
    <string name="bonus_pt2">points, you earned a x</string>
    <string name="bonus_pt3">multiplier. \nYour final score is </string>

    <string name="bonus_fuel_title">Bonus fuel!</string>
    <string name="bonus_fuel_body">To charge the rocket and go faster jump on board and score more than 20 points. \nYou can do this!</string>
    <string name="bonus_thruster_title">Bonus rocket thruster!</string>
    <string name="bonus_thruster_body">To add a more powerful engine jump on board and score more than 30 points. \nYou need to stay focus!</string>
    <string name="bonus_wings_title">Bonus new wings!</string>
    <string name="bonus_wings_body">To add new powerful wings jump on board and score more than 40 points. \nThat\'s really hard!</string>
    <string name="ok_btn">Ok!</string>
</resources>